[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse_scraper"
dynamic = ["version"]
authors = [ { name="basic-bgnr" } ]
description = "Unofficial Scraper to interface with https://www.nepalstock.com"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
        "Intended Audience :: Research",
        "Operating System :: POSIX :: Linux",
    ]
dependencies = [
    "httpx[http2]==0.27.2",
    "pywasm==1.2.2",
    "tqdm==4.66.5",
]

[project.urls]
Repository = "https://github.com/khagendra7karki/NepseScraper"
Issues ="https://github.com/khagendra7karki/NepseScraper/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["example*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.wasm"]


[tool.setuptools.dynamic]
version = {attr = "nepse_scraper.__version__"}

[tool.black]
line-length = 88
target-version = ['py311']
color = true
verbose = true

[tool.isort]
profile = "black"
verbose = true
